--- a/inst/htmlwidgets/DiagrammeR.yaml
+++ b/inst/htmlwidgets/DiagrammeR.yaml
@@ -1,4 +1,12 @@
 dependencies:
+- name: d3
+  version: 3.3.8
+  src: htmlwidgets/lib/d3
+  script: d3.min.js
+- name: dagre
+  version: 0.4.0
+  src: htmlwidgets/lib/dagre-d3
+  script: dagre-d3.core.min.js
 - name: mermaid
   version: 0.3.0
   src: htmlwidgets/lib/mermaid
