--- a/inst/htmlwidgets/DiagrammeR.yaml
+++ b/inst/htmlwidgets/DiagrammeR.yaml
@@ -5,8 +5,8 @@ dependencies:
   script: d3.min.js
 - name: dagre
   version: 0.4.0
-  src: htmlwidgets/lib/dagre-d3
-  script: dagre-d3.core.min.js
+  src: "htmlwidgets/lib/dagre-d3"
+  script: "dagre-d3.min.js"
 - name: mermaid
   version: 0.3.0
   src: htmlwidgets/lib/mermaid
