--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: DiagrammeR
 Type: Package
 Title: Create diagrams using R.
-Version: 0.01
-Date: 2014-12-28
+Version: 0.02
+Date: 2015-01-06
 Author: Richard Iannone <riannone@me.com>
 Maintainer: Richard Iannone <riannone@me.com>
-Description: Create some nice diagrams using R.
+Description: Create diagrams and flowcharts using R.
 License: MIT
 Imports:
     htmlwidgets (>= 0.3.2)
