Use the rstudio viewer for grViz when possible
Checks the current version of RStudio via the rstudioapi package and uses the viewer for grViz when version >= 0.99.120 (the first version that included the Qt 5.4 WebKit engine)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ Description: With the DiagrammeR package, you can create diagrams and flowcharts
     Markdown, and in shiny apps.
 License: MIT + file LICENSE
 Imports:
-    htmlwidgets (>= 0.3.2)
+    htmlwidgets (>= 0.3.2), rstudioapi (>= 0.2)
 Suggests:
     knitr
 VignetteBuilder: knitr
