rstudio project and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,3 @@
-# History files
-.Rhistory
-
-# Example code in package build process
-*-Ex.R
-
-# R data files from past sessions
-.Rdata
-
-# RStudio files
-.Rproj.user/
 .Rproj.user
-DiagrammeR.Rproj
-
-# Input files
-*.mmd
-*.gv
-
-# Output files
-*.txt
-*.tif
+.Rhistory
+.RData
