Add exported function to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,6 @@ export(DiagrammeROutput)
 export(grViz)
 export(mermaid)
 export(renderDiagrammeR)
+export(replace_in_spec)
 import(htmlwidgets)
 importFrom(rstudioapi,isAvailable)
