Add export statements to NAMESPACE file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,10 @@
 export(DiagrammeR)
 export(DiagrammeROutput)
 export(grViz)
+export(grVizOutput)
 export(mermaid)
 export(renderDiagrammeR)
+export(renderGrViz)
 export(replace_in_spec)
 import(htmlwidgets)
 importFrom(rstudioapi,isAvailable)
