Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(DiagrammeR)
 export(DiagrammeROutput)
 export(grViz)
 export(grVizOutput)
+export(graphviz_nodes_edges_df)
 export(mermaid)
 export(renderDiagrammeR)
 export(renderGrViz)
