Add to NAMESPACE file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(DiagrammeROutput)
 export(grViz)
 export(grVizOutput)
 export(graphviz_nodes_edges_df)
+export(graphviz_single_df)
 export(mermaid)
 export(renderDiagrammeR)
 export(renderGrViz)
