update to newest mermaid to get subgraphs and gantt

--- a/inst/htmlwidgets/DiagrammeR.yaml
+++ b/inst/htmlwidgets/DiagrammeR.yaml
@@ -11,6 +11,7 @@ dependencies:
   version: 0.3.0
   src: htmlwidgets/lib/mermaid
   script: dist/mermaid.slim.min.js
+  stylesheet: dist/mermaid.css
 - name: DiagrammeR-styles
   version: 0.2
   src: htmlwidgets/lib/styles
