Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(DiagrammeR)
 export(DiagrammeROutput)
+export(exportSVG)
 export(grViz)
 export(grVizOutput)
 export(graphviz_nodes_edges_df)
@@ -10,5 +11,6 @@ export(mermaid)
 export(renderDiagrammeR)
 export(renderGrViz)
 export(replace_in_spec)
+import(V8)
 import(htmlwidgets)
 importFrom(rstudioapi,isAvailable)
