Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(mermaid)
 export(renderDiagrammeR)
 export(renderGrViz)
 export(replace_in_spec)
+export(x11_hex)
 import(V8)
 import(htmlwidgets)
 importFrom(rstudioapi,isAvailable)
