Add dependency to 'chromatography.js' in pkg yaml file

--- a/inst/htmlwidgets/DiagrammeR.yaml
+++ b/inst/htmlwidgets/DiagrammeR.yaml
@@ -16,3 +16,7 @@ dependencies:
   version: 0.2
   src: htmlwidgets/lib/styles
   stylesheet: styles.css
+- name: chromatography
+  version: 0.1
+  src: htmlwidgets/lib/chromatography
+  script: chromatography.js
