Modify NAMESPACE to import function from 'V8' pkg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,6 @@ export(renderDiagrammeR)
 export(renderGrViz)
 export(replace_in_spec)
 export(x11_hex)
-import(V8)
+importFrom(V8, new_context)
 import(htmlwidgets)
 importFrom(rstudioapi,isAvailable)
