--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(DiagrammeROutput)
 export(exportSVG)
 export(grViz)
 export(grVizOutput)
-export(graphviz_nodes_edges_df)
+export(graphviz_graph)
 export(graphviz_single_df)
 export(mermaid)
 export(renderDiagrammeR)
