Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(mermaid)
 export(renderDiagrammeR)
 export(renderGrViz)
 export(replace_in_spec)
+export(scale_edges)
 export(scale_nodes)
 export(x11_hex)
 import(htmlwidgets)
