--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,10 @@ export(combine_nodes)
 export(create_edges)
 export(create_nodes)
 export(exportSVG)
+export(get_nodes)
 export(grViz)
 export(grVizOutput)
 export(graphviz_graph)
-export(graphviz_single_df)
 export(mermaid)
 export(renderDiagrammeR)
 export(renderGrViz)
