Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(get_nodes)
 export(grViz)
 export(grVizOutput)
 export(graphviz_graph)
+export(graphviz_render)
 export(mermaid)
 export(renderDiagrammeR)
 export(renderGrViz)
