Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(grVizOutput)
 export(graphviz_graph)
 export(graphviz_render)
 export(mermaid)
+export(node_info)
 export(renderDiagrammeR)
 export(renderGrViz)
 export(replace_in_spec)
