--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(grViz)
 export(grVizOutput)
 export(graphviz_graph)
 export(graphviz_render)
+export(hex_palette)
 export(mermaid)
 export(node_info)
 export(renderDiagrammeR)
