--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(DiagrammeR)
 export(DiagrammeROutput)
+export(add_edges)
 export(combine_edges)
 export(combine_nodes)
 export(create_edges)
