--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(DiagrammeR)
 export(DiagrammeROutput)
 export(add_edges)
+export(add_node)
 export(combine_edges)
 export(combine_nodes)
 export(create_edges)
