Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(combine_edges)
 export(combine_nodes)
 export(create_edges)
 export(create_nodes)
+export(delete_node)
 export(exportSVG)
 export(get_nodes)
 export(grViz)
