Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(create_edges)
 export(create_nodes)
 export(delete_edge)
 export(delete_node)
+export(edge_present)
 export(exportSVG)
 export(get_nodes)
 export(grViz)
