Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(graphviz_render)
 export(hex_palette)
 export(mermaid)
 export(node_info)
+export(node_present)
 export(renderDiagrammeR)
 export(renderGrViz)
 export(replace_in_spec)
