Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(hex_palette)
 export(mermaid)
 export(node_info)
 export(node_present)
+export(node_type)
 export(renderDiagrammeR)
 export(renderGrViz)
 export(replace_in_spec)
