Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(delete_node)
 export(edge_present)
 export(edge_relationship)
 export(exportSVG)
+export(get_edges)
 export(get_nodes)
 export(grViz)
 export(grVizOutput)
