--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(create_edges)
 export(create_nodes)
 export(delete_edge)
 export(delete_node)
+export(edge_info)
 export(edge_present)
 export(edge_relationship)
 export(exportSVG)
