--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(edge_relationship)
 export(exportSVG)
 export(get_edges)
 export(get_nodes)
+export(get_predecessors)
 export(get_successors)
 export(grViz)
 export(grVizOutput)
