--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(grVizOutput)
 export(graphviz_graph)
 export(graphviz_render)
 export(hex_palette)
+export(is_graph_empty)
 export(mermaid)
 export(node_info)
 export(node_present)
