Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(graphviz_render)
 export(hex_palette)
 export(is_graph_empty)
 export(mermaid)
+export(node_count)
 export(node_info)
 export(node_present)
 export(node_type)
