--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,6 @@ export(grViz)
 export(grVizOutput)
 export(graphviz_graph)
 export(graphviz_render)
-export(hex_palette)
 export(is_graph_empty)
 export(mermaid)
 export(node_count)
@@ -32,6 +31,7 @@ export(node_type)
 export(renderDiagrammeR)
 export(renderGrViz)
 export(replace_in_spec)
+export(roll_palette)
 export(scale_edges)
 export(scale_nodes)
 export(x11_hex)
