Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(grViz)
 export(grVizOutput)
 export(graphviz_graph)
 export(graphviz_render)
+export(is_graph_directed)
 export(is_graph_empty)
 export(mermaid)
 export(node_count)
