--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(add_node)
 export(combine_edges)
 export(combine_nodes)
 export(create_edges)
+export(create_graph)
 export(create_nodes)
 export(delete_edge)
 export(delete_node)
@@ -20,7 +21,6 @@ export(get_predecessors)
 export(get_successors)
 export(grViz)
 export(grVizOutput)
-export(graphviz_graph)
 export(graphviz_render)
 export(is_graph_directed)
 export(is_graph_empty)
