--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,7 +21,6 @@ export(get_predecessors)
 export(get_successors)
 export(grViz)
 export(grVizOutput)
-export(graphviz_render)
 export(is_graph_directed)
 export(is_graph_empty)
 export(mermaid)
@@ -31,6 +30,7 @@ export(node_present)
 export(node_type)
 export(renderDiagrammeR)
 export(renderGrViz)
+export(render_graph)
 export(replace_in_spec)
 export(roll_palette)
 export(scale_edges)
