Add to import statement (adding stringr pkg)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,5 +36,5 @@ export(roll_palette)
 export(scale_edges)
 export(scale_nodes)
 export(x11_hex)
-import(htmlwidgets)
+import(htmlwidgets, stringr)
 importFrom(rstudioapi,isAvailable)
