Correct NAMESPACE for incorrect import statement

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,5 +36,6 @@ export(roll_palette)
 export(scale_edges)
 export(scale_nodes)
 export(x11_hex)
-import(htmlwidgets, stringr)
+import(htmlwidgets)
+import(stringr)
 importFrom(rstudioapi,isAvailable)
