Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(get_predecessors)
 export(get_successors)
 export(grViz)
 export(grVizOutput)
+export(image_icon)
 export(is_graph_directed)
 export(is_graph_empty)
 export(mermaid)
