--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(create_graph)
 export(create_nodes)
 export(delete_edge)
 export(delete_node)
+export(display_graph_object)
+export(edge_count)
 export(edge_info)
 export(edge_present)
 export(edge_relationship)
