--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(node_count)
 export(node_info)
 export(node_present)
 export(node_type)
+export(query_graph)
 export(renderDiagrammeR)
 export(renderGrViz)
 export(render_graph)
