Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(DiagrammeR)
 export(DiagrammeROutput)
 export(add_edges)
 export(add_node)
+export(add_to_graph_series)
 export(combine_edges)
 export(combine_nodes)
 export(create_edges)
