--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(node_info)
 export(node_present)
 export(node_type)
 export(query_graph)
+export(remove_from_graph_series)
 export(renderDiagrammeR)
 export(renderGrViz)
 export(render_graph)
