--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,13 @@ export(DiagrammeR)
 export(DiagrammeROutput)
 export(add_edges)
 export(add_node)
-export(add_to_graph_series)
+export(add_to_series)
 export(combine_edges)
 export(combine_nodes)
 export(create_edges)
 export(create_graph)
-export(create_graph_series)
 export(create_nodes)
+export(create_series)
 export(delete_edge)
 export(delete_node)
 export(display_graph_object)
@@ -35,7 +35,7 @@ export(node_info)
 export(node_present)
 export(node_type)
 export(query_graph)
-export(remove_from_graph_series)
+export(remove_from_series)
 export(renderDiagrammeR)
 export(renderGrViz)
 export(render_graph)
@@ -43,7 +43,7 @@ export(replace_in_spec)
 export(roll_palette)
 export(scale_edges)
 export(scale_nodes)
-export(subset_graph_series)
+export(subset_series)
 export(x11_hex)
 import(htmlwidgets)
 import(stringr)
