Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(replace_in_spec)
 export(roll_palette)
 export(scale_edges)
 export(scale_nodes)
+export(series_info)
 export(subset_series)
 export(x11_hex)
 import(htmlwidgets)
