Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(remove_from_series)
 export(renderDiagrammeR)
 export(renderGrViz)
 export(render_graph)
+export(render_graph_from_series)
 export(replace_in_spec)
 export(roll_palette)
 export(scale_edges)
