Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(scale_edges)
 export(scale_nodes)
 export(series_info)
 export(subset_series)
+export(trigger_script)
 export(x11_hex)
 import(htmlwidgets)
 import(stringr)
