Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(grViz)
 export(grVizOutput)
 export(graph_count)
 export(image_icon)
+export(import_graph)
 export(is_graph_directed)
 export(is_graph_empty)
 export(mermaid)
