Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(create_edges)
 export(create_graph)
 export(create_nodes)
 export(create_series)
+export(create_subgraph)
 export(delete_edge)
 export(delete_node)
 export(display_graph_object)
