Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(grViz)
 export(grVizOutput)
 export(graph_count)
 export(image_icon)
+export(import_graph)
 export(is_graph_directed)
 export(is_graph_empty)
 export(mermaid)
@@ -47,6 +48,7 @@ export(scale_nodes)
 export(series_info)
 export(subset_series)
 export(trigger_script)
+export(vivagraph)
 export(x11_hex)
 import(htmlwidgets)
 import(stringr)
