--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: DiagrammeR
 Type: Package
-Title: Create Diagrams and Flowcharts Using R
+Title: Create Graph Diagrams and Flowcharts Using R
 Version: 0.7
 Date: 2015-06-11
 Authors@R: c(
