--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,8 +48,10 @@ export(scale_nodes)
 export(series_info)
 export(subset_series)
 export(trigger_script)
+export(visnetwork)
 export(vivagraph)
 export(x11_hex)
 import(htmlwidgets)
 import(stringr)
+import(visNetwork)
 importFrom(rstudioapi,isAvailable)
