--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,8 +40,7 @@ Maintainer: Richard Iannone <riannone@me.com>
 Description: Create graph diagrams and flowcharts using R.
 License: MIT + file LICENSE
 Imports:
-    htmlwidgets (>= 0.3.2), rstudioapi (>= 0.2),
-    stringr (>= 1.0.0), visNetwork (>= 0.0.4)
+    htmlwidgets (>= 0.3.2), rstudioapi (>= 0.2), stringr (>= 1.0.0)
 Suggests:
     knitr, V8 (>= 0.5)
 VignetteBuilder: knitr
