--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,8 +39,9 @@ Authors@R: c(
 Maintainer: Richard Iannone <riannone@me.com>
 Description: Create graph diagrams and flowcharts using R.
 License: MIT + file LICENSE
-Imports:
+Imports: 
     htmlwidgets (>= 0.3.2), rstudioapi (>= 0.2), stringr (>= 1.0.0)
-Suggests:
-    knitr, V8 (>= 0.5)
+Suggests: 
+    knitr, V8 (>= 0.5),
+    testthat
 VignetteBuilder: knitr
