Add to '.travis.yml' file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-# Sample .travis.yml for R projects
-
 language: r
 warnings_are_errors: true
 sudo: required
@@ -12,3 +10,9 @@ notifications:
   email:
     on_success: change
     on_failure: change
+
+r_github_packages:
+  - jimhester/covr
+
+after_success:
+  - Rscript -e 'library(covr);codecov()'
