--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,7 +50,7 @@ export(subset_series)
 export(trigger_script)
 export(vivagraph)
 export(x11_hex)
-import(V8)
 import(htmlwidgets)
 import(stringr)
+importFrom(V8,new_context)
 importFrom(rstudioapi,isAvailable)
