--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,8 @@ Description: Create graph diagrams and flowcharts using R.
 License: MIT + file LICENSE
 Imports:
     htmlwidgets (>= 0.3.2), rstudioapi (>= 0.2),
-    stringr (>= 1.0.0), V8 (>= 0.5)
+    stringr (>= 1.0.0), V8 (>= 0.5),
+    visNetwork (>= 0.1.0)
 URL: https://github.com/rich-iannone/DiagrammeR
 Suggests:
     knitr,
