--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,7 +42,7 @@ License: MIT + file LICENSE
 Imports:
     htmlwidgets (>= 0.3.2), rstudioapi (>= 0.2),
     stringr (>= 1.0.0), V8 (>= 0.5),
-    visNetwork (>= 0.1.0)
+    visNetwork (>= 0.1.0), igraph (>= 0.7.1)
 URL: https://github.com/rich-iannone/DiagrammeR
 Suggests:
     knitr,
