Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(visnetwork)
 export(vivagraph)
 export(x11_hex)
 import(htmlwidgets)
+import(igraph)
 import(stringr)
 import(visNetwork)
 importFrom(V8,new_context)
