--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(trigger_script)
 export(visnetwork)
 export(vivagraph)
 export(x11_hex)
+import(V8)
 import(htmlwidgets)
 import(igraph)
 import(stringr)
