--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,8 @@ export(x11_hex)
 import(htmlwidgets)
 import(igraph)
 import(stringr)
-import(visNetwork)
 importFrom(V8,new_context)
 importFrom(rstudioapi,isAvailable)
+importFrom(visNetwork,visEdges)
+importFrom(visNetwork,visNetwork)
+importFrom(visNetwork,visPhysics)
