--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,12 +40,11 @@ Maintainer: Richard Iannone <riannone@me.com>
 Description: Create graph diagrams and flowcharts using R.
 License: MIT + file LICENSE
 Imports:
-    htmlwidgets (>= 0.3.2), rstudioapi (>= 0.2),
-    stringr (>= 1.0.0), igraph (>= 0.7.1),
-    visNetwork (>= 0.1.0)
+    htmlwidgets (>= 0.5), rstudioapi (>= 0.3.1),
+    stringr (>= 1.0.0), igraph (>= 1.0.1),
+    visNetwork (>= 0.1.0), V8 (>= 0.6)
 URL: https://github.com/rich-iannone/DiagrammeR
 Suggests:
     knitr,
-    testthat,
-    V8 (>= 0.6)
+    testthat
 VignetteBuilder: knitr
