--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,10 +51,10 @@ export(trigger_script)
 export(visnetwork)
 export(vivagraph)
 export(x11_hex)
-import(V8)
 import(htmlwidgets)
 import(igraph)
 import(stringr)
+importFrom(V8,new_context)
 importFrom(rstudioapi,isAvailable)
 importFrom(visNetwork,visEdges)
 importFrom(visNetwork,visNetwork)
