--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,9 +53,13 @@ export(vivagraph)
 export(x11_hex)
 import(htmlwidgets)
 import(igraph)
-import(stringr)
 importFrom(V8,new_context)
 importFrom(rstudioapi,isAvailable)
+importFrom(stringr,str_count)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_extract)
+importFrom(stringr,str_replace)
+importFrom(stringr,str_replace_all)
 importFrom(visNetwork,visEdges)
 importFrom(visNetwork,visNetwork)
 importFrom(visNetwork,visPhysics)
