Add apt-packages statement to install 'libv8-dev'

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ env:
  global:
    - CRAN: http://cran.rstudio.com
 
+apt_packages:
+  - libv8-dev
+
 notifications:
   email:
     on_success: change
