--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 language: r
-warnings_are_errors: true
-sudo: required
 
-env:
- global:
-   - CRAN: http://cran.rstudio.com
+warnings_are_errors: false
+sudo: required
 
 apt_packages:
   - libv8-dev
@@ -13,9 +10,3 @@ notifications:
   email:
     on_success: change
     on_failure: change
-
-r_github_packages:
-  - jimhester/covr
-
-after_success:
-  - Rscript -e 'library(covr);codecov()'
