--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,10 @@ notifications:
   email:
     on_success: change
     on_failure: change
+
+r_github_packages:
+  - jimhester/covr
+
+after_success:
+  - Rscript -e 'library(covr);codecov()'
+  
