--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ importFrom(stringr,str_extract)
 importFrom(stringr,str_extract_all)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
+importFrom(stringr,str_split)
 importFrom(visNetwork,visEdges)
 importFrom(visNetwork,visNetwork)
 importFrom(visNetwork,visPhysics)
