--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,7 @@ export(display_graph_object)
 export(edge_count)
 export(edge_info)
 export(edge_present)
-export(edge_relationship)
+export(edge_rel)
 export(exportSVG)
 export(get_edges)
 export(get_nodes)
