--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(replace_in_spec)
 export(roll_palette)
 export(scale_edges)
 export(scale_nodes)
+export(select_graph_from_series)
 export(series_info)
 export(subset_series)
 export(trigger_script)
