Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(combine_nodes)
 export(create_edges)
 export(create_graph)
 export(create_nodes)
+export(create_random_graph)
 export(create_series)
 export(create_subgraph)
 export(delete_edge)
