--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,5 +64,7 @@ importFrom(stringr,str_replace)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
 importFrom(visNetwork,visEdges)
+importFrom(visNetwork,visInteraction)
 importFrom(visNetwork,visNetwork)
+importFrom(visNetwork,visNodes)
 importFrom(visNetwork,visPhysics)
