Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(add_edges)
 export(add_node)
 export(add_to_series)
 export(combine_edges)
+export(combine_graphs)
 export(combine_nodes)
 export(create_edges)
 export(create_graph)
