Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(add_to_series)
 export(combine_edges)
 export(combine_graphs)
 export(combine_nodes)
+export(country_graph)
 export(create_edges)
 export(create_graph)
 export(create_nodes)
