--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,8 @@ importFrom(stringr,str_extract)
 importFrom(stringr,str_extract_all)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_split)
+importFrom(utils,packageVersion)
+importFrom(utils,read.csv)
 importFrom(visNetwork,visEdges)
 importFrom(visNetwork,visInteraction)
 importFrom(visNetwork,visNetwork)
