--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,8 +41,7 @@ Description: Create graph diagrams and flowcharts using R.
 License: MIT + file LICENSE
 Imports:
     htmlwidgets (>= 0.5), rstudioapi (>= 0.3.1),
-    stringr (>= 1.0.0), visNetwork (>= 0.1.1),
-    V8 (>= 0.6)
+    stringr (>= 1.0.0), visNetwork (>= 0.1.1)
 URL: https://github.com/rich-iannone/DiagrammeR
 Suggests:
     V8 (>= 0.6),
