Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(edge_present)
 export(edge_rel)
 export(get_edges)
 export(get_nodes)
+export(get_paths)
 export(get_predecessors)
 export(get_successors)
 export(grViz)
