Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(render_graph_from_series)
 export(replace_in_spec)
 export(select_graph_from_series)
 export(series_info)
+export(set_edge_attr)
 export(set_node_attr)
 export(subset_series)
 export(trigger_script)
