Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(edge_info)
 export(edge_present)
 export(edge_rel)
 export(get_edges)
+export(get_node_attr)
 export(get_nodes)
 export(get_paths)
 export(get_predecessors)
