--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(edge_count)
 export(edge_info)
 export(edge_present)
 export(edge_rel)
+export(get_edge_attr)
 export(get_edges)
 export(get_node_attr)
 export(get_nodes)
