Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(create_nodes)
 export(create_random_graph)
 export(create_series)
 export(create_subgraph)
+export(create_subgraph_from_selection)
 export(delete_edge)
 export(delete_node)
 export(display_graph_object)
