--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(renderGrViz)
 export(render_graph)
 export(render_graph_from_series)
 export(replace_in_spec)
+export(select_graph)
 export(select_graph_from_series)
 export(select_nodes)
 export(series_info)
