--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(grVizOutput)
 export(graph_count)
 export(image_icon)
 export(import_graph)
+export(invert_selection)
 export(is_graph_directed)
 export(is_graph_empty)
 export(mermaid)
