--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(renderGrViz)
 export(render_graph)
 export(render_graph_from_series)
 export(replace_in_spec)
+export(select_edges)
 export(select_graph_from_series)
 export(select_nodes)
 export(series_info)
