--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(DiagrammeROutput)
 export(add_edges)
 export(add_node)
 export(add_to_series)
+export(clear_selection)
 export(combine_edges)
 export(combine_graphs)
 export(combine_nodes)
