--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,7 +55,9 @@ export(select_graph_from_series)
 export(select_nodes)
 export(series_info)
 export(set_edge_attr)
+export(set_edge_attr_with_selection)
 export(set_node_attr)
+export(set_node_attr_with_selection)
 export(subset_series)
 export(trigger_script)
 export(visnetwork)
