Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(select_nodes)
 export(series_info)
 export(set_edge_attr)
 export(set_edge_attr_with_selection)
+export(set_graph_name)
 export(set_node_attr)
 export(set_node_attr_with_selection)
 export(subset_series)
