--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(series_info)
 export(set_edge_attr)
 export(set_edge_attr_with_selection)
 export(set_graph_name)
+export(set_graph_time)
 export(set_node_attr)
 export(set_node_attr_with_selection)
 export(subset_series)
