--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,6 @@ export(create_graph)
 export(create_nodes)
 export(create_random_graph)
 export(create_series)
-export(create_subgraph)
 export(create_subgraph_from_selection)
 export(delete_edge)
 export(delete_node)
@@ -53,6 +52,7 @@ export(replace_in_spec)
 export(select_edges)
 export(select_graph_from_series)
 export(select_nodes)
+export(select_nodes_in_neighborhood)
 export(series_info)
 export(set_edge_attr)
 export(set_edge_attr_with_selection)
