--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,8 +24,10 @@ export(edge_info)
 export(edge_present)
 export(edge_rel)
 export(get_edge_attr)
+export(get_edge_df)
 export(get_edges)
 export(get_node_attr)
+export(get_node_df)
 export(get_nodes)
 export(get_paths)
 export(get_predecessors)
