--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(DiagrammeROutput)
 export(add_edge_df)
 export(add_edges)
 export(add_node)
+export(add_node_df)
 export(add_to_series)
 export(clear_selection)
 export(combine_edges)
