Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(edge_rel)
 export(get_edge_attr)
 export(get_edge_df)
 export(get_edges)
+export(get_global_graph_attr)
 export(get_node_attr)
 export(get_node_df)
 export(get_nodes)
@@ -60,6 +61,7 @@ export(select_nodes_in_neighborhood)
 export(series_info)
 export(set_edge_attr)
 export(set_edge_attr_with_selection)
+export(set_global_graph_attr)
 export(set_graph_name)
 export(set_graph_time)
 export(set_node_attr)
