--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,10 +26,12 @@ export(edge_info)
 export(edge_present)
 export(edge_rel)
 export(get_edge_attr)
+export(get_edge_attr_from_selection)
 export(get_edge_df)
 export(get_edges)
 export(get_global_graph_attr)
 export(get_node_attr)
+export(get_node_attr_from_selection)
 export(get_node_df)
 export(get_nodes)
 export(get_paths)
@@ -67,6 +69,8 @@ export(set_graph_time)
 export(set_node_attr)
 export(set_node_attr_with_selection)
 export(subset_series)
+export(trav_in)
+export(trav_out)
 export(trigger_script)
 export(visnetwork)
 export(vivagraph)
