Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(get_node_df)
 export(get_nodes)
 export(get_paths)
 export(get_predecessors)
+export(get_selection)
 export(get_successors)
 export(grViz)
 export(grVizOutput)
