--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,10 +40,13 @@ Maintainer: Richard Iannone <riannone@me.com>
 Description: Create graph diagrams and flowcharts using R.
 License: MIT + file LICENSE
 Imports:
-    htmlwidgets (>= 0.5), rstudioapi (>= 0.3.1),
-    stringr (>= 1.0.0), visNetwork (>= 0.1.1)
+    htmlwidgets (>= 0.5),
+    rstudioapi (>= 0.3.1),
+    stringr (>= 1.0.0),
+    visNetwork (>= 0.1.1)
 URL: https://github.com/rich-iannone/DiagrammeR
 BugReports: https://github.com/rich-iannone/DiagrammeR/issues
 Suggests:
     knitr,
     testthat
+RoxygenNote: 5.0.0
