--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,8 @@
 
 export(DiagrammeR)
 export(DiagrammeROutput)
+export(add_edge)
 export(add_edge_df)
-export(add_edges)
 export(add_node)
 export(add_node_df)
 export(add_to_series)
