Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(render_graph_from_series)
 export(replace_in_spec)
 export(select_edges)
 export(select_graph_from_series)
+export(select_last_node)
 export(select_nodes)
 export(select_nodes_in_neighborhood)
 export(series_info)
