--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(set_node_attr_with_selection)
 export(subset_series)
 export(trav_in)
 export(trav_out)
+export(trav_out_edge)
 export(trigger_script)
 export(visnetwork)
 export(vivagraph)
