--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,7 +43,8 @@ Imports:
     htmlwidgets (>= 0.5),
     rstudioapi (>= 0.3.1),
     stringr (>= 1.0.0),
-    visNetwork (>= 0.1.1)
+    visNetwork (>= 0.1.1),
+    magrittr (>= 1.5)
 URL: https://github.com/rich-iannone/DiagrammeR
 BugReports: https://github.com/rich-iannone/DiagrammeR/issues
 Suggests:
