Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(trav_out_edge)
 export(trigger_script)
 export(visnetwork)
 export(vivagraph)
+export(withdraw_values)
 export(x11_hex)
 import(htmlwidgets)
 importFrom(rstudioapi,isAvailable)
