--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,8 @@ Imports:
     rstudioapi (>= 0.3.1),
     stringr (>= 1.0.0),
     visNetwork (>= 0.1.1),
-    magrittr (>= 1.5)
+    magrittr (>= 1.5),
+    scales (>= 0.3.0)
 URL: https://github.com/rich-iannone/DiagrammeR
 BugReports: https://github.com/rich-iannone/DiagrammeR/issues
 Suggests:
