Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(set_node_attr)
 export(set_node_attr_with_selection)
 export(subset_series)
 export(trav_in)
+export(trav_in_edge)
 export(trav_out)
 export(trav_out_edge)
 export(trigger_script)
