Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ export(trav_in)
 export(trav_in_edge)
 export(trav_out)
 export(trav_out_edge)
+export(trav_out_node)
 export(trigger_script)
 export(visnetwork)
 export(vivagraph)
