--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(set_node_attr_with_selection)
 export(subset_series)
 export(trav_in)
 export(trav_in_edge)
+export(trav_in_node)
 export(trav_out)
 export(trav_out_edge)
 export(trav_out_node)
