Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ export(set_graph_time)
 export(set_node_attr)
 export(set_node_attr_with_selection)
 export(subset_series)
+export(trav_both)
 export(trav_in)
 export(trav_in_edge)
 export(trav_in_node)
