Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(add_edge)
 export(add_edge_df)
 export(add_node)
 export(add_node_df)
+export(add_nodes_from_csv)
 export(add_to_series)
 export(clear_selection)
 export(combine_edges)
