Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(DiagrammeR)
 export(DiagrammeROutput)
 export(add_edge)
 export(add_edge_df)
+export(add_edges_from_csv)
 export(add_node)
 export(add_node_df)
 export(add_nodes_from_csv)
