--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(get_edges)
 export(get_global_graph_attr)
 export(get_node_attr)
 export(get_node_attr_from_selection)
+export(get_node_count_in_selection)
 export(get_node_df)
 export(get_nodes)
 export(get_paths)
