Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(edge_present)
 export(edge_rel)
 export(get_edge_attr)
 export(get_edge_attr_from_selection)
+export(get_edge_count_in_selection)
 export(get_edge_df)
 export(get_edges)
 export(get_global_graph_attr)
