Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(DiagrammeROutput)
 export(add_edge)
 export(add_edge_df)
 export(add_edges_from_csv)
+export(add_n_nodes_from_selection)
 export(add_node)
 export(add_node_df)
 export(add_nodes_from_csv)
