Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(create_series)
 export(create_subgraph_from_selection)
 export(delete_edge)
 export(delete_node)
+export(delete_nodes_in_selection)
 export(display_graph_object)
 export(edge_count)
 export(edge_info)
