Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(create_random_graph)
 export(create_series)
 export(create_subgraph_from_selection)
 export(delete_edge)
+export(delete_edges_in_selection)
 export(delete_node)
 export(delete_nodes_in_selection)
 export(display_graph_object)
