--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(renderGrViz)
 export(render_graph)
 export(render_graph_from_series)
 export(replace_in_spec)
+export(rescale_edge_attr_in_selection)
 export(select_edges)
 export(select_graph_from_series)
 export(select_last_edge)
@@ -93,6 +94,7 @@ export(vivagraph)
 export(withdraw_values)
 export(x11_hex)
 import(htmlwidgets)
+import(scales)
 importFrom(rstudioapi,isAvailable)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
