Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ export(select_graph_from_series)
 export(select_last_edge)
 export(select_last_node)
 export(select_nodes)
+export(select_nodes_by_degree)
 export(select_nodes_in_neighborhood)
 export(series_info)
 export(set_edge_attr)
