--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(DiagrammeROutput)
 export(add_edge)
 export(add_edge_df)
 export(add_edges_from_csv)
+export(add_n_nodes)
 export(add_n_nodes_from_selection)
 export(add_n_nodes_to_selection)
 export(add_node)
@@ -66,6 +67,7 @@ export(render_graph)
 export(render_graph_from_series)
 export(replace_in_spec)
 export(rescale_edge_attr_in_selection)
+export(rescale_node_attr_in_selection)
 export(select_edges)
 export(select_graph_from_series)
 export(select_last_edge)
