Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,12 +5,14 @@ export(DiagrammeROutput)
 export(add_edge)
 export(add_edge_df)
 export(add_edges_from_csv)
+export(add_edges_from_df)
 export(add_n_nodes)
 export(add_n_nodes_from_selection)
 export(add_n_nodes_to_selection)
 export(add_node)
 export(add_node_df)
 export(add_nodes_from_csv)
+export(add_nodes_from_df)
 export(add_to_series)
 export(clear_selection)
 export(combine_edges)
