--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(get_edge_count_in_selection)
 export(get_edge_df)
 export(get_edges)
 export(get_global_graph_attr)
+export(get_graph_from_series)
 export(get_node_attr)
 export(get_node_attr_from_selection)
 export(get_node_count_in_selection)
@@ -71,7 +72,6 @@ export(replace_in_spec)
 export(rescale_edge_attr_in_selection)
 export(rescale_node_attr_in_selection)
 export(select_edges)
-export(select_graph_from_series)
 export(select_last_edge)
 export(select_last_node)
 export(select_nodes)
