--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,7 @@ importFrom(stringr,str_split)
 importFrom(utils,read.csv)
 importFrom(visNetwork,visEdges)
 importFrom(visNetwork,visInteraction)
+importFrom(visNetwork,visLayout)
 importFrom(visNetwork,visNetwork)
 importFrom(visNetwork,visNodes)
 importFrom(visNetwork,visPhysics)
