--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ export(delete_edge)
 export(delete_edges_in_selection)
 export(delete_node)
 export(delete_nodes_in_selection)
+export(deposit_node_attr)
+export(deposit_node_attr_from_selection)
 export(display_graph_object)
 export(edge_count)
 export(edge_info)
@@ -41,8 +43,6 @@ export(get_edge_df)
 export(get_edges)
 export(get_global_graph_attr)
 export(get_graph_from_series)
-export(get_node_attr)
-export(get_node_attr_from_selection)
 export(get_node_count_in_selection)
 export(get_node_df)
 export(get_nodes)
