--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,8 @@ export(delete_edge)
 export(delete_edges_in_selection)
 export(delete_node)
 export(delete_nodes_in_selection)
+export(deposit_edge_attr)
+export(deposit_edge_attr_from_selection)
 export(deposit_node_attr)
 export(deposit_node_attr_from_selection)
 export(display_graph_object)
@@ -36,8 +38,6 @@ export(edge_count)
 export(edge_info)
 export(edge_present)
 export(edge_rel)
-export(get_edge_attr)
-export(get_edge_attr_from_selection)
 export(get_edge_count_in_selection)
 export(get_edge_df)
 export(get_edges)
