Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ export(select_last_edge)
 export(select_last_node)
 export(select_nodes)
 export(select_nodes_by_degree)
+export(select_nodes_by_id)
 export(select_nodes_in_neighborhood)
 export(series_info)
 export(set_edge_attr)
