Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ export(replace_in_spec)
 export(rescale_edge_attr_in_selection)
 export(rescale_node_attr_in_selection)
 export(select_edges)
+export(select_edges_by_id)
 export(select_last_edge)
 export(select_last_node)
 export(select_nodes)
