--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,11 @@ Imports:
     rstudioapi (>= 0.3.1),
     stringr (>= 1.0.0),
     visNetwork (>= 0.1.2),
-    scales (>= 0.3.0)
+    scales (>= 0.3.0),
+    svglite (>= 1.0.0),
+    rsvg(>= 0.4),
+    png(>= 0.1),
+    jpeg(>= 0.1)
 URL: https://github.com/rich-iannone/DiagrammeR
 BugReports: https://github.com/rich-iannone/DiagrammeR/issues
 Suggests:
