--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ export(withdraw_values)
 export(x11_hex)
 import(htmlwidgets)
 import(scales)
+importFrom(grDevices,colors)
 importFrom(rstudioapi,isAvailable)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
