Update NAMESPACE using roxygen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(edge_count)
 export(edge_info)
 export(edge_present)
 export(edge_rel)
+export(export_graph)
 export(get_edge_df)
 export(get_edges)
 export(get_global_graph_attr)
@@ -100,6 +101,7 @@ export(vivagraph)
 export(withdraw_values)
 export(x11_hex)
 import(htmlwidgets)
+import(rsvg)
 import(scales)
 importFrom(grDevices,colors)
 importFrom(rstudioapi,isAvailable)
