--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(create_nodes)
 export(create_random_graph)
 export(create_series)
 export(create_subgraph_from_selection)
+export(create_xy_pts)
 export(delete_edge)
 export(delete_edges_in_selection)
 export(delete_node)
