Update NAMESPACE using roxygen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(create_nodes)
 export(create_random_graph)
 export(create_series)
 export(create_subgraph_from_selection)
+export(create_xy_err)
 export(create_xy_graph)
 export(create_xy_lines)
 export(create_xy_pts)
