Update NAMESPACE using roxygen

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(create_xy_err)
 export(create_xy_graph)
 export(create_xy_lines)
 export(create_xy_pts)
+export(currency)
 export(delete_edge)
 export(delete_edges_in_selection)
 export(delete_node)
