Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(create_xy_graph)
 export(create_xy_lines)
 export(create_xy_pts)
 export(currency)
+export(date_axis)
 export(delete_edge)
 export(delete_edges_in_selection)
 export(delete_node)
