Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(create_xy_lines)
 export(create_xy_pts)
 export(currency)
 export(date_axis)
+export(days_in_data_range)
 export(days_in_month)
 export(delete_edge)
 export(delete_edges_in_selection)
