--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(get_successors)
 export(grViz)
 export(grVizOutput)
 export(graph_count)
+export(graph_info)
 export(image_icon)
 export(import_graph)
 export(invert_selection)
