Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ export(select_edges)
 export(select_edges_by_node_id)
 export(select_last_edge)
 export(select_last_node)
+export(select_nbr_nodes_by_node_attr)
 export(select_nodes)
 export(select_nodes_by_degree)
 export(select_nodes_by_id)
