--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(edge_present)
 export(edge_rel)
 export(export_csv)
 export(export_graph)
+export(get_edge_attr)
 export(get_edge_df)
 export(get_edges)
 export(get_global_graph_attr)
