Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(get_edges)
 export(get_global_graph_attr)
 export(get_graph_from_series)
 export(get_graph_name)
+export(get_graph_time)
 export(get_node_attr)
 export(get_node_df)
 export(get_nodes)
