--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,10 +94,12 @@ export(select_nodes_by_id)
 export(select_nodes_in_neighborhood)
 export(series_info)
 export(set_edge_attr)
+export(set_edge_attr_ws)
 export(set_global_graph_attr)
 export(set_graph_name)
 export(set_graph_time)
 export(set_node_attr)
+export(set_node_attr_ws)
 export(subset_series)
 export(trav_both)
 export(trav_in)
