--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,8 +81,8 @@ export(renderGrViz)
 export(render_graph)
 export(render_graph_from_series)
 export(replace_in_spec)
-export(rescale_edge_attr_in_selection)
-export(rescale_node_attr_in_selection)
+export(rescale_edge_attr_ws)
+export(rescale_node_attr_ws)
 export(select_edges)
 export(select_edges_by_node_id)
 export(select_last_edge)
