--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,9 +32,9 @@ export(date_axis)
 export(days_in_data_range)
 export(days_in_month)
 export(delete_edge)
-export(delete_edges_in_selection)
+export(delete_edges_ws)
 export(delete_node)
-export(delete_nodes_in_selection)
+export(delete_nodes_ws)
 export(deposit_edge_attr)
 export(deposit_edge_attr_from_selection)
 export(deposit_edge_count_in_selection)
