--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(get_edge_attr)
 export(get_edge_df)
 export(get_edges)
 export(get_global_graph_attr)
+export(get_graph_diameter)
 export(get_graph_from_series)
 export(get_graph_name)
 export(get_graph_time)
