Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,6 +60,7 @@ export(get_node_attr)
 export(get_node_df)
 export(get_nodes)
 export(get_paths)
+export(get_periphery)
 export(get_predecessors)
 export(get_selection)
 export(get_successors)
