--- a/NAMESPACE
+++ b/NAMESPACE
@@ -63,6 +63,7 @@ export(get_paths)
 export(get_periphery)
 export(get_predecessors)
 export(get_selection)
+export(get_similar_nbrs)
 export(get_successors)
 export(grViz)
 export(grVizOutput)
@@ -90,7 +91,6 @@ export(select_edges)
 export(select_edges_by_node_id)
 export(select_last_edge)
 export(select_last_node)
-export(select_nbr_nodes_by_node_attr)
 export(select_nodes)
 export(select_nodes_by_degree)
 export(select_nodes_by_id)
