Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(get_graph_diameter)
 export(get_graph_from_series)
 export(get_graph_name)
 export(get_graph_time)
+export(get_nbrs)
 export(get_node_attr)
 export(get_node_df)
 export(get_nodes)
