Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(edge_rel)
 export(export_csv)
 export(export_graph)
 export(get_common_nbrs)
+export(get_degree_histogram)
 export(get_eccentricity)
 export(get_edge_attr)
 export(get_edge_df)
