Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(add_n_nodes_to_selection)
 export(add_node)
 export(add_node_df)
 export(add_nodes_from_table)
+export(add_star)
 export(add_to_series)
 export(clear_selection)
 export(combine_edges)
