Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(add_node)
 export(add_node_df)
 export(add_nodes_from_table)
 export(add_path)
+export(add_prism)
 export(add_star)
 export(add_to_series)
 export(clear_selection)
