--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,7 @@ export(create_graph)
 export(create_nodes)
 export(create_random_graph)
 export(create_series)
-export(create_subgraph_from_selection)
+export(create_subgraph_ws)
 export(create_xy_err)
 export(create_xy_graph)
 export(create_xy_lines)
