--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,12 @@ export(add_path)
 export(add_prism)
 export(add_star)
 export(add_to_series)
+export(cache_edge_attr)
+export(cache_edge_attr_ws)
+export(cache_edge_count_ws)
+export(cache_node_attr)
+export(cache_node_attr_ws)
+export(cache_node_count_ws)
 export(clear_selection)
 export(combine_edges)
 export(combine_graphs)
@@ -40,12 +46,6 @@ export(delete_edge)
 export(delete_edges_ws)
 export(delete_node)
 export(delete_nodes_ws)
-export(deposit_edge_attr)
-export(deposit_edge_attr_from_selection)
-export(deposit_edge_count_in_selection)
-export(deposit_node_attr)
-export(deposit_node_attr_from_selection)
-export(deposit_node_count_in_selection)
 export(edge_count)
 export(edge_info)
 export(edge_present)
