--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(edge_present)
 export(edge_rel)
 export(export_csv)
 export(export_graph)
+export(get_cache)
 export(get_common_nbrs)
 export(get_degree_histogram)
 export(get_eccentricity)
@@ -123,7 +124,6 @@ export(trav_out_node)
 export(trigger_script)
 export(visnetwork)
 export(vivagraph)
-export(withdraw_values)
 export(x11_hex)
 import(htmlwidgets)
 import(rsvg)
