Add to NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ export(edge_present)
 export(edge_rel)
 export(export_csv)
 export(export_graph)
+export(get_all_reachable_nodes)
 export(get_cache)
 export(get_common_nbrs)
 export(get_degree_histogram)
@@ -82,6 +83,7 @@ export(graph_info)
 export(image_icon)
 export(import_graph)
 export(invert_selection)
+export(is_graph_connected)
 export(is_graph_directed)
 export(is_graph_empty)
 export(mermaid)
