--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,7 +52,7 @@ export(edge_present)
 export(edge_rel)
 export(export_csv)
 export(export_graph)
-export(get_all_reachable_nodes)
+export(get_all_connected_nodes)
 export(get_cache)
 export(get_common_nbrs)
 export(get_degree_histogram)
