--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(export_graph)
 export(get_all_connected_nodes)
 export(get_cache)
 export(get_common_nbrs)
+export(get_connected_components)
 export(get_degree_histogram)
 export(get_eccentricity)
 export(get_edge_attr)
