--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ export(delete_edge)
 export(delete_edges_ws)
 export(delete_node)
 export(delete_nodes_ws)
+export(do_dfs)
 export(edge_count)
 export(edge_info)
 export(edge_present)
